infra/chatbackend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbackend
  namespace: azureai2  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatbackend
  template:
    metadata:
      labels:
        app: chatbackend
    spec:
      affinity: 
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - chatbackend
              topologyKey: kubernetes.io/hostname
      containers:
        - name: chatbackend
          image: mycontainerregistry66js.azurecr.io/chatbackend:latest
          ports:
            - containerPort: 5000
