infra/gpt4-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  name: gpt4-deployment
  namespace: azureai2  
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aoaichatapp
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: aoaichatapp
    spec:
      containers:
      - image: $ACR_NAME.azurecr.io/aoaichatapp:latest
        name: aoaichatapp
        ports:
        - containerPort: 5000
