infra/istio-chatbackend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatbackend
  namespace: azureopenai
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chatbackend
  template:
    metadata:
      labels:
        app: chatbackend
    spec:
      containers:
        - name: chatbackend
          image: mycontainerregistry66js.azurecr.io/chatbackend:latest
          ports:
            - containerPort: 5000
