infra/qdrantdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qdrant-with-sidecar
spec:
  replicas: 2
  selector:
    matchLabels:
      app: qdrant
  template:
    metadata:
      labels:
        app: qdrant
    spec:
      containers:
        - name: qdrant
          image: qdrant/qdrant:latest
          ports:
            - containerPort: 6333
        - name: embed-sidecar
          image: $ACR_NAME.azurecr.io/vector-loader:latest
          ports:
            - containerPort: 5173
