infra/aoaichatapp-headless-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: aoaichatapp-headless
  namespace: azureai  
spec:
  ports:
  - port: 80
    name: http
  clusterIP: None
  selector:
    app: aoaichatapp
