infra/azureopenaichat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: azureopenaichat-service
  namespace: azureopenai
spec:
  selector:
    app: azureopenaichat
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
