infra/chatfrontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatfrontend-service
  namespace: azureai2  
spec:
  type: LoadBalancer
  selector:
    app: chatfrontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
