infra/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatfrontend-service
  namespace: azureopenai
spec:
  selector:
    app: chatfrontend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
