infra/istio-chatbackend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbackend-service
  namespace: azureopenai
spec:
  selector:
    app: chatbackend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
