infra/rag-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ragbackend-service
spec:
  selector:
    app: rag-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
