infra/rag-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ragfrontend-service
spec:
  selector:
    app: rag-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
