infra/rag-qdrantdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ragqdrantdb-service
spec:
  selector:
    app: rag-app
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 6333
      targetPort: 6333
