infra/simple-fb-sidecar-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: azure-openai-chatsvc
  namespace: azureai
spec:
  type: LoadBalancer
  selector:
    app: azure-openai-chat
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
