infra/azureopenai-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: azureopenai-route
  namespace: azureopenai
spec:
  hosts:
  - "*"
  gateways:
  - chatfrontend-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: chatfrontend-service
        port:
          number: 80
