infra/azureopenaichat-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: azureopenaivirtualservice
  namespace: azureopenai
spec:
  hosts:
    - "*"                        # match any Host header accepted by the Gateway
  gateways:
    - azureopenaichat-gateway
  http:
    - match:
        - uri:
            prefix: /            # match all paths
      route:
        - destination:
            host: azureopenaichat-service.azureopenai.svc.cluster.local
            subset: v1
          weight: 75
        - destination:
            host: azureopenaichat-service.azureopenai.svc.cluster.local
            subset: v2
          weight: 25
