infra/rag-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rag-app-router
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ragfrontend-service
            port:
              number: 80
      - path: /backend(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ragbackend-service
            port:
              number: 5000
      - path: /qdrantdb(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ragqdrantdb-service
            port:
              number: 6333
